# resumeevaluator_backend

./: .gitignore  deploy.py  lambda_handler.py  pyproject.toml  requirements.txt  resumeevaluator.py  server.py  tools.py
src/app/: resumeevaluator.py  server.py  tools.py
