[project]
name = "backend"
version = "0.1.0"
description = "Backend logic for resume evaluator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.2",
    "httpx==0.28.1",
    "ipywidgets==8.1.8",
    "langchain-anthropic==1.3.0",
    "langchain-community==0.4.1",
    "langchain-experimental==0.4.1",
    "langchain-openai==1.1.6",
    "langgraph==1.0.5",
    "langgraph-checkpoint-sqlite==3.0.1",
    "langsmith==0.5.1",
    "lxml==6.0.2",
    "mcp-server-fetch==2025.1.17",
    "mcp[cli]==1.25.0",
    "pinecone==8.0.0",
    "playwright==1.57.0",
    "plotly==6.5.0",
    "polygon-api-client==1.16.3",
    "psutil==7.2.0",
    "pypdf==6.5.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "semantic-kernel==1.36.0",
    "setuptools==80.9.0",
    "smithery==0.4.4",
    "speedtest-cli==2.1.3",
    "wikipedia==1.4.0",
    "xmltodict==1.0.2",
    "ipykernel==7.1.0",
    "langchain-ollama==1.0.1",
    "langchain-chroma==1.1.0",
    "fastapi==0.127.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aioice==0.10.2",
    "aiortc==1.14.0",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.75.0",
    "anyio==4.12.0",
    "appnope==0.1.4",
    "art==6.5",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "av==16.0.1",
    "azure-ai-agents==1.1.0",
    "azure-ai-projects==1.0.0",
    "azure-core==1.37.0",
    "azure-identity==1.25.1",
    "azure-storage-blob==12.27.1",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "build==1.3.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.0",
    "click==8.3.1",
    "cloudevents==1.12.0",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "durationpy==0.10",
    "executing==2.2.1",
    "filelock==3.20.1",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "google-auth==2.45.0",
    "google-crc32c==1.8.0",
    "googleapis-common-protos==1.72.0",
    "google-search-results>=2.4.2",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.2.3",
    "humanfriendly==10.0",
    "idna==3.11",
    "ifaddr==0.2.0",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kubernetes==33.1.0",
    "langchain-classic==1.0.1",
    "langchain-core==1.2.5",
    "langchain-text-splitters==1.1.0",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.1",
    "lazy-object-proxy==1.12.0",
    "markdown-it-py==4.0.0",
    "markdownify==1.2.2",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msal==1.34.0",
    "msal-extensions==1.3.1",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "narwhals==2.14.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.0",
    "oauthlib==3.3.1",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "openai==2.14.0",
    "openapi-core==0.19.5",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "overrides==7.7.0",
    "packaging==24.2",
    "parse==1.20.2",
    "parso==0.8.5",
    "pathable==0.4.4",
    "pexpect==4.9.0",
    "pinecone-plugin-assistant==3.0.1",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.5.1",
    "posthog==5.4.0",
    "prance==25.4.8.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protego==0.5.0",
    "protobuf==6.33.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybars4==0.9.13",
    "pybase64==1.4.3",
    "pycparser==2.23",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylibsrtp==1.0.0",
    "pymeta3==0.5.1",
    "pyopenssl==25.3.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.21",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "readabilipy==0.3.0",
    "referencing==0.36.2",
    "regex==2025.11.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.17",
    "ruamel-yaml-clib==0.2.15",
    "scipy==1.16.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.45",
    "sqlite-vec==0.1.6",
    "sse-starlette==3.0.4",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.21.0",
    "typer-slim==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.1",
    "widgetsnbextension==4.0.15",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
